<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
     <com.beatabout.othikyatha.EditTextPreference 
           android:key="@string/name_pref"
           android:title="Profile Name"
           android:layout="@+layout/edittextpreference" />
     <com.beatabout.othikyatha.LocationsPreference 
           android:key="@string/locations_pref"
           android:title="Locations"
           android:layout="@+layout/locationspreference" />
      <com.beatabout.othikyatha.SeekbarPreference 
           android:key="@string/ring_volume_pref"
           android:title="Ringer Volume"
           android:layout="@+layout/seekbarpreference" />
      <CheckBoxPreference 
           android:key="@string/silent_pref"
           android:title="Silent" />
      <CheckBoxPreference 
           android:key="@string/vibrate_pref"
           android:title="Vibrate" />
      <com.beatabout.othikyatha.SeekbarPreference 
           android:key="@string/voice_volume_pref"
           android:title="Voice Volume"
           android:layout="@+layout/seekbarpreference" />
      <com.beatabout.othikyatha.SeekbarPreference 
           android:key="@string/media_volume_pref"
           android:title="Media Volume"
           android:layout="@+layout/seekbarpreference" />
      <!--  Re-enable once ringtone preferences work
      <RingtonePreference
           android:name="Ringtone Preference"
           android:summary="Select a ringtone"
           android:title="Ringtones"
           android:ringtoneType="ringtone"
           android:showSilent="false"
           android:key="@string/ringtone_pref" />
      -->
</PreferenceScreen>